# ir2425_group_09

./: CMakeLists.txt  README.md  README.txt  command.txt  lista_topics_nodes.txt  note.docx  package.xml  per stefano apriltag detection node
.github/workflows/: sync-to-bitbucket.yml
Group09_A1/ir2425_group_09/: README.txt  package.xml
Group09_A1/ir2425_group_09/launch/: launcher.launch
Group09_A1/ir2425_group_09/scripts/: nodeA.py  nodeB_exploration.py  nodeB_goal_management.py  nodeB_navigation.py  nodeBapriltag_detection.py
ir2425_group_09/: TODO.txt
ir2425_group_09/launch/: launcher.launch
ir2425_group_09/scripts/: node.py  nodeA.py  nodeB.py  nodeB_exploration.py
launch/: launcher.launch  setup.launch  start_service.launch
msg/: Detections.msg  PlacingMessage.msg  PoseObjectId.msg  TargetObject.msg
scripts/: nodeA.py  nodeA_navigation.py  nodeA_placing_routine.py  nodeB.py  nodeB_exploration.py  nodeB_goal_management.py  nodeC.py  nodeC_co.py  nodeC_manipulator.py  nodeC_picking_routine.py  nodeC_planning_scene.py
src/: nodeA.py  nodeB.py  nodeB_apriltag_detection.py  nodeB_exploration.py  nodeB_goal_management.py  nodeB_navigation.py  nodeBapriltag_detection.py
